feat: Brave Search with Perplexity fallback and quota tracking

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -389,3 +389,46 @@ Config updated — gateway restart needed for agents to be fully active.
 - Agent-to-agent history disabled by default (security)
 
 **Documentation updated:** AGENTS.md now includes subagent configuration section.
+
+## [12:54] Brave Search Setup med Perplexity Fallback
+
+**Brave Search API:**
+- Nøgle: BSAUSKFyN8AcFD7J8sQVLIVOXOw5OIL (gemt i config + .env)
+- Gratis tier: 2.000 søgninger/måned
+- Rate limit: 1 request/sekund
+- Test: ✅ Virker perfekt
+
+**Quota tracking & fallback:**
+- Tracking file: `memory/brave-usage.json`
+- Log file: `memory/search-usage.log`
+- Warning threshold: 1.990 (99.5%)
+- Fallback: Perplexity via OpenRouter når grænsen nås
+
+**Skill created:** `skills/smart-search/`
+- `smart-search.sh` - Hovedscript med tracking
+- `reset-brave-counter.sh` - Månedlig reset
+- `SKILL.md` - Dokumentation
+
+**Cron job:**
+- Job: brave-usage-reset
+- Schedule: 0 0 1 * * (1. i hver måned)
+- Action: Nulstiller tæller
+
+**check-quotas opdateret:**
+- Inkluderer nu brave_search tracking
+- Viser: used, remaining, percentage, near_limit status
+- Automatisk månedlig reset hvis nødvendigt
+
+**Heartbeat opdateret:**
+- Check #4: Brave Search Quota (hver 6. time)
+- Alert ved 1.950+ søgninger
+- Tracker i heartbeat-state.json
+
+**Status:**
+✅ Brave Search aktiv
+✅ Perplexity fallback klar
+✅ Quota tracking live
+✅ Månedlig auto-reset
+✅ Heartbeat monitorering
+
+Næste søgning: #2/2.000 (februar)
