feat: Todoist skill with state management, labels, and rich comments

--- a/memory/2026-02-11.md
+++ b/memory/2026-02-11.md
@@ -432,3 +432,50 @@ Config updated — gateway restart needed for agents to be fully active.
 ✅ Heartbeat monitorering
 
 Næste søgning: #2/2.000 (februar)
+
+## [13:02] Todoist Skill Opdateret med States, Labels & Comments
+
+**Sammenligning med awesome-openclaw use case:**
+- Deres: Sections + labels (men ikke fuldt implementeret)
+- Vores: Labels-baseret state management (Todoist API begrænsning)
+
+**Nye features:**
+
+| Feature | Status | Notes |
+|---------|--------|-------|
+| **State labels** | ✅ | `state-queue`, `state-progress`, `state-waiting`, `state-review`, `state-done` |
+| **Custom labels** | ✅ | Tilføj egne labels som `["urgent", "research"]` |
+| **State transitions** | ✅ | `start_task`, `set_waiting`, `set_review`, `complete_task` |
+| **Kommentarer** | ✅ | Med type: `progress`, `blocker`, `decision`, `info`, `update` |
+| **Reconcile** | ✅ | Tæller per state, stalled detection, waiting alerts |
+
+**State workflow:**
+```
+🟡 Queue → 🔵 In Progress → [🟠 Waiting] → [🟣 Review] → 🟢 Done
+```
+
+**Comment types med emojis:**
+- 📈 Progress — Fremskridt
+- 🚧 Blocker — Problemer
+- 🎯 Decision — Beslutninger
+- ℹ️ Info — Information
+- 💬 Update — Generelle updates
+
+**Test:** ✅ Opgave gennem hele workflowet
+- Oprettet med labels `["test", "demo"]`
+- Startet (state-progress)
+- Kommentar tilføjet (progress type)
+- Sat til waiting med reason
+- Reconcile detected waiting task
+- Completed med summary
+
+**Arkitektur valg:**
+- Bruger labels fremfor sections (Todoist REST API v2 understøtter ikke section moves)
+- State labels har prefix `state-` for at undgå konflikter
+- Automatisk label oprettelse
+- Comments viser altid state ændringer
+
+**Files updated:**
+- `skills/todoist/todoist.sh` — 100% omskrevet
+- `skills/todoist/SKILL.md` — Opdateret dokumentation
+- `HEARTBEAT.md` — Opdateret reconcile check
