Security hardening: Tool policies per agent + verifier agent
- Main agent restricted til delegation (no exec/write/browser)
- Tool policies tilføjet til alle agents (principle of least privilege)
- Verifier agent implementeret (Sonnet 4.5 for QA)
- Fallback monitoring tilføjet til HEARTBEAT.md
- Communicator: no web (research = researcher's job)
- Coordinator: projektleder-rolle (read+delegate, no exec/write)
- Filosofi: Hvis vi mangler en agent, laver vi den

Ref: docs/security-hardening-proposal.md

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -1,4 +1,6 @@
-# 2026-02-13 - Personlighedsprofil & Arbejdsstil
+# 2026-02-13 - Personlighedsprofil & Security Hardening
+
+## [08:11] Personlighedsprofil & Arbejdsstil
 
 ## ADHD & Arbejdspræferencer
 
@@ -57,3 +59,56 @@ Danny delte vigtig indsigt om sin arbejdsstil og personlighed:
 - Respekter tidspres
 - Effektive løsninger
 - Undgå unødvendige detaljer
+
+---
+
+## [08:17] Security Hardening - Reddit Research
+
+**Context:** Danny delte Reddit-tråd om VM hardening for OpenClaw. Identificerede gaps i vores setup.
+
+**Gaps fundet:**
+1. Ingen tool-level restrictions per agent (alle har fuld adgang til exec/write/browser)
+2. Ingen fallback observability (ved ikke hvornår Kimi træder ind for Sonnet)
+3. Ingen Worker→Verifier pattern for kvalitetssikring
+
+**Beslutning:** Coordinator agent spawned til at researche og designe løsning.
+
+**Output:** `docs/security-hardening-proposal.md`
+
+---
+
+## [08:20] Security Hardening - Design Decisions
+
+**Danny's beslutninger:**
+
+### ✅ Main agent skal have restrictions
+**Rationale:** Tving spawning af specialiserede agents med billigere LLM'er
+- Main får kun: read, memory, sessions (spawn/list/send)
+- INGEN: exec, write, edit, browser, nodes
+- Tvinger god agent-arkitektur
+
+### ✅ Verifier agent - implementer
+**Rationale:** Kvalitetssikring af agent-output
+- Bruger Sonnet 4.5 (stærkere end workers)
+- Read + web + memory adgang
+- Spawnes af orchestrator/coordinator
+- Ekstra cost accepteret for bedre kvalitet
+
+### ❌ Global Kimi restrictions - fjern
+**Rationale:** Tool policies skal ligge hos individuelle agents, ikke globalt
+- Fjern `tools.byProvider` begrænsninger
+- Hver agent definerer egne restrictions
+- Filosofi: "Hvis vi mangler en agent, laver vi den"
+
+### 📋 Todo tilføjet
+- Test sandbox/container isolation (Proxmox)
+- Implementer tool policies per agent
+- Implementer fallback observability
+- Implementer verifier pattern
+
+**Status:** Security hardening proposal opdateret med beslutninger, klar til implementering
+
+**Blocker:** Afventer Danny's godkendelse af åbne punkter:
+- Communicator browser-adgang?
+- Coordinator restrictions?
+- Fallback notification-metode?
