Tilføjet Reddit research: 9 tråde om optimization, guides, models

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -112,3 +112,41 @@ Danny delte vigtig indsigt om sin arbejdsstil og personlighed:
 - Communicator browser-adgang?
 - Coordinator restrictions?
 - Fallback notification-metode?
+
+---
+
+## [08:35-09:00] Security Hardening - Implementation & Tool Policy Debug
+
+**Første forsøg - Forkerte tool-navne:**
+- Implementerede tool policies med `profile: "minimal"` + custom allow-lists
+- Main agent mistede ALLE tools efter restart
+- Problem: `profile: "minimal"` blokerer alt, allow-list virker ikke som forventet
+
+**Debugging-proces:**
+1. Fjernede tool restrictions fra main midlertidigt
+2. Spawned researcher → fejlede også (ingen web_fetch)
+3. Læste OpenClaw docs: `/usr/lib/node_modules/openclaw/docs/gateway/sandbox-vs-tool-policy-vs-elevated.md`
+
+**Root cause fundet:**
+- SKAL bruge **tool groups** i stedet for individual tool-navne med minimal profile
+- Tool groups: `group:sessions`, `group:memory`, `group:fs`, `group:runtime`, `group:ui` osv.
+- `allow`-lister uden profile virker bedre end `profile: "minimal"` + allow
+
+**Korrekt implementering (9:00):**
+```
+main → group:sessions, group:memory, read (spawning + delegation)
+monitor → read, group:memory, web_search, web_fetch
+researcher → read, group:memory, web_search, web_fetch, image
+communicator → read, group:memory, message
+orchestrator → group:runtime, group:fs, group:memory, group:sessions
+coordinator → read, group:memory, web_search, web_fetch, group:sessions
+verifier → read, group:memory, web_search, web_fetch
+```
+
+**Lessons learned:**
+1. OpenClaw tool policies bruger tool groups - ikke individuelle tool-navne med profiles
+2. `profile: "minimal"` + `allow` giver konflikt - brug kun `allow` uden profile
+3. Test hver agent efter config-ændring (spawn researcher/orchestrator)
+4. Gateway restart krævet efter tool policy ændringer
+
+**Status:** Config opdateret korrekt, gateway genstartet, guardrails aktive ✅
