docs: Memory search fixed - OpenAI key added to .env and auth-profiles

--- a/memory/2026-02-13.md
+++ b/memory/2026-02-13.md
@@ -150,3 +150,147 @@ verifier → read, group:memory, web_search, web_fetch
 4. Gateway restart krævet efter tool policy ændringer
 
 **Status:** Config opdateret korrekt, gateway genstartet, guardrails aktive ✅
+
+---
+
+## [17:53] Context Håndtering Fejl - "Hvor er koden?"
+
+**Problem:** Orchestrator implementerede tjekbolig.ai fixes, men reviewer kunne ikke finde koden. Main vidste ikke hvor projektet var. 30+ minutter spildt.
+
+**Root cause:** Ingen standard for kode-lokalitets rapportering mellem agenter.
+
+**Fix implementeret:**
+- Tilføjet **Kode-Lokalitetsstandard (MANDATORY)** til AGENTS.md
+- Alle implementerings-agenter SKAL rapportere:
+  - Location: `workspace/projects/[projekt]/[fil]`
+  - Git repo URL + commit hash
+  - Agent ID
+- Return besked SKAL inkludere sti
+
+**Lesson learned #5:**
+> "Når orchestrator siger 'implementeret', skal han ALTID rapportere: Hvor koden er (fuld path), Commit hash, Hvad der er ændret. Sub-agents har IKKE automatisk adgang til filsystem info."
+
+## [18:06] Workflow Audit - Security & Spawn Permissions
+
+**Trigger:** Danny spurgte "hvordan sikre vi fremadrettet at vi både kan ramme security og complexity?"
+
+**Problem identificeret:**
+1. Security agent (Bent) kunne ikke spawnes af nogen (manglede i allowAgents)
+2. Coordinator kunne ikke spawne security → approval chains fejlede
+3. Manglende workflow dokumentation
+
+**Fixes deployed:**
+1. **Spawn permissions opdateret:**
+   - main → tilføjet `security`
+   - coordinator → tilføjet `security` + `reviewer`
+   - orchestrator → tilføjet `security` + `reviewer` + `communicator`
+
+2. **Spawn matrix dokumenteret** i AGENTS.md
+3. **Workflow diagrams** tilføjet med fallback routes
+
+**Git commits:**
+- Config: `2e460c4` - "fix: Add security to spawn permissions"
+- Workspace: `c3cf4a8` - "docs: Add Kode-Lokalitetsstandard and Spawn Permissions Matrix"
+
+## [18:21] Security Audit af Agent Fleet
+
+**Bent (security) kørte full audit af alle 11 agenter.**
+
+**Score: 5/10** (Moderat til Høj Risiko)
+
+**Kritiske fund:**
+1. **Orchestrator privilege escalation** - `exec` + `write` + `edit` + `group:fs` + spawn
+2. **Manglende approval chains** - ingen workflows for high-risk operations
+3. **Self-verification** - coordinator/orchestrator kan spawne verifier til eget arbejde
+
+**Decisions made:**
+- **Orchestrator tools:** BEHOLD (han skal kunne skrive kode - det er hans job)
+- **Approval chains:** "Gør først, verificer bagefter" (Danny's "NU" stil)
+- **Webmon:** Dokumenter som dormant
+- **Self-verification:** KUN main kan spawne verifier (separation of duties)
+
+## [18:37] Agent Navne - Personalisering
+
+**Danny tildelte navne til alle agenter:**
+main=James, security=Bent, orchestrator=Rene, communicator=Rikke, monitor=Karl, complexity-guardian=Karen, webmon=Morten, reviewer=Christian, researcher=Mette, coordinator=Anders, verifier=Peter
+
+**Git commit:** `4775961` - "fix: Update agent names to correct values"
+
+## [18:42] Security Fixes Deployed
+
+**Implementeret:**
+1. **Verifier isolation** - Kun James (main) kan spawne Peter
+2. **Approval chains dokumenteret** - "Gør først, verificer bagefter"
+3. **Webmon dokumenteret** - Dormant, fremtidig uptime monitoring
+4. **Orchestrator tools justified** - Dokumenteret hvorfor Rene har mange tools
+
+**Git commits:** `6dc25c5`, `3bed6fc`
+
+## [18:42] Agent-to-Agent Messaging Decision
+
+**Decision: Behold disabled**
+- Start med disabled, enable kun ved konkret pain point
+- Incremental approach giver bedre control
+
+## [18:49] tjekbolig.ai Deployment Forsøg #1 - FAILED
+
+**Rene (orchestrator) timeout efter 10 min** - Begge Kimi modeller fejlede
+
+**Critical mistakes:**
+1. ❌ Specificerede IKKE nordicway deployment
+2. ❌ Manglende SSH credentials/paths
+
+**Danny's feedback:** "han ved også godt at han skal deploy til nordicway ikke?"
+
+**Lesson learned #6:**
+> "Deployment tasks SKAL inkludere: Host, credentials, paths, URLs, metode. Aldrig antag at 'deploy' er nok."
+
+## [19:10] Deployment Info Search
+
+**Mette (researcher) søger nordicway credentials** fra gårdagens samtale
+
+---
+
+## [19:18] PROJECT.md Standard - Credential Management
+
+**Trigger:** Danny påpegede at deployment credentials diskuteret i går ikke var dokumenteret nogen steder. Mette kunne ikke finde Nordicway info.
+
+**Problem:**
+- Deployment credentials diskuteres i chat
+- Ikke persistent dokumenteret
+- Skal IKKE på git (sikkerhed)
+- Men skal være tilgængeligt for agenter
+
+**Decision: PROJECT.md Standard implementeret**
+
+**Hver projekt får `projects/[projekt]/PROJECT.md` med:**
+1. **Deployment info** (SSH, paths, URLs, deploy kommandoer)
+2. **API Keys tracking** med rotation dates
+3. **Stack beskrivelse**
+4. **Environment variables** (navne, ikke værdier)
+5. **Deploy checklist**
+
+**Sikkerhed:**
+- `PROJECT.md` .gitignored (aldrig commit)
+- Fulde keys ALDRIG i PROJECT.md
+- Kun key prefixes til identifikation
+
+**Credential Rotation Tracking:**
+- Alle API keys får **modtagelsesdato**
+- **Næste rotation = dato + 90 dage**
+- **Bent (security) tjekker månedligt**
+- **Alert til Danny 2 uger før deadline**
+
+**Implementeret:**
+- Template: `templates/PROJECT.md.template`
+- .gitignore regel tilføjet
+- AGENTS.md dokumenteret som MANDATORY
+- Security check script: `skills/security/check-credentials.sh`
+
+**Danny's feedback:**
+- Backup: "kan jeg altid komme på" (ikke nødvendigt at automatisere)
+- Rotation tracking: "ja god ide"
+- Environment separation: "bør vi nok lave men ikke endnu"
+
+**Lesson learned #7:**
+> "Deployment credentials diskuteret i chat forsvinder. PROJECT.md (gitignored) giver persistent, agent-tilgængelig dokumentation uden at kompromittere sikkerhed."
