docs: Update James config, backlog, USER.md with learnings

--- a/memory/2026-02-14.md
+++ b/memory/2026-02-14.md
@@ -238,3 +238,73 @@ Should we simplify to 4 agents + skills? Or keep current architecture?
 - Current: ~$31-100/md (depending on usage)
 - After optimization: ~$13-40/md
 - Savings: $20-60/md = $240-720/år
+
+---
+
+## [16:08-16:10] Reddit Posts Analysis
+
+**Posts analyzed:**
+1. "How I optimize my OpenClaw setup" (specific instructions, identity)
+2. "OpenClaw 101" (detailed guide with API recs, memory workflow)
+
+**Key learnings:**
+- Reddit users use /compact BEFORE every new task
+- They have daily memory summary via cron
+- They use Supermemory.ai for cloud backup (we don't)
+- They have morning brief automation (Danny: skip this)
+- 30-day key rotation (we: 90 days)
+
+**What we do better:**
+- ✅ Git tracking everything
+- ✅ Skills = $0 (they use sub-agents = cost)
+- ✅ Security baseline (tool policies)
+- ✅ Budget limits ($50 hard cap)
+
+**What we miss:**
+- ⚠️ /compact workflow (implementing now)
+- ⚠️ Daily memory automation
+- ⚠️ Cloud backup
+
+**Decision:** Implement /compact workflow (Danny approved)
+
+---
+
+## [16:20-16:23] /compact Workflow Added
+
+**Action:** Rene (orchestrator) added /compact workflow to AGENTS.md
+**Commit:** 18b11b6
+**Content:**
+- Mandatory /compact before new tasks spanning >5 messages
+- Run /compact after task completion
+- Commit key decisions to MEMORY.md
+- Prevents context overflow
+
+**Status:** ✅ Complete
+
+---
+
+## [16:22-] P2 Agent Simplification Started
+
+**Danny approved:** 11 agents → 4 agents
+
+**Remove (7):**
+- monitor (Karl) → heartbeat
+- researcher (Mette) → research skill
+- verifier (Peter) → Anders workflow
+- reviewer (Christian) → Anders workflow
+- security (Bent) → security skill
+- complexity-guardian (Karen) → vibe-check skill
+- webmon (Morten) → dormant
+
+**Keep (4):**
+- main (James) - Coordinator
+- orchestrator (Rene) - Builder
+- communicator (Rikke) - Writer
+- coordinator (Anders) - Analyst
+
+**Spawned:** 3 Rene subagents working in parallel
+**Status:** 🔄 In progress
+
+---
+
+*End of day updates - P0+P1 complete, P2 in progress*
